--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -125,5 +125,6 @@
         <file>MessageDialog.qml</file>
         <file>NewsPage.qml</file>
         <file>AccountTypeBadge.qml</file>
+        <file>GCard.qml</file>
     </qresource>
 </RCC>
