Update create account dialog

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -126,5 +126,6 @@
         <file>NewsPage.qml</file>
         <file>AccountTypeBadge.qml</file>
         <file>GCard.qml</file>
+        <file>FixedErrorBadge.qml</file>
     </qresource>
 </RCC>
