Move collapse sidebar setting to the sidebar

--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -39,5 +39,6 @@
         <file>svg/warning.svg</file>
         <file>svg/testnet-liquid.svg</file>
         <file>svg/external_link.svg</file>
+        <file>svg/arrow_left.svg</file>
     </qresource>
 </RCC>
