--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -124,5 +124,6 @@
         <file>SelectCoinsView.qml</file>
         <file>MessageDialog.qml</file>
         <file>NewsPage.qml</file>
+        <file>AccountTypeBadge.qml</file>
     </qresource>
 </RCC>
