--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -131,5 +131,6 @@
         <file>JadeSignMessageView.qml</file>
         <file>WalletSideButton.qml</file>
         <file>SideBar.qml</file>
+        <file>DeviceBadge.qml</file>
     </qresource>
 </RCC>
