--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -132,5 +132,6 @@
         <file>WalletSideButton.qml</file>
         <file>SideBar.qml</file>
         <file>DeviceBadge.qml</file>
+        <file>WalletViewFooter.qml</file>
     </qresource>
 </RCC>
