Show liquid transaction details when signing with jade

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -135,5 +135,6 @@
         <file>WalletViewFooter.qml</file>
         <file>StatusBar.qml</file>
         <file>SessionBadge.qml</file>
+        <file>JadeSignLiquidTransactionView.qml</file>
     </qresource>
 </RCC>
