--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -136,5 +136,6 @@
         <file>StatusBar.qml</file>
         <file>SessionBadge.qml</file>
         <file>JadeSignLiquidTransactionView.qml</file>
+        <file>JadeSignTransactionView.qml</file>
     </qresource>
 </RCC>
