Show bitcoin transaction details when signing with ledger

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -137,5 +137,6 @@
         <file>SessionBadge.qml</file>
         <file>JadeSignLiquidTransactionView.qml</file>
         <file>JadeSignTransactionView.qml</file>
+        <file>LedgerSignTransactionView.qml</file>
     </qresource>
 </RCC>
