Add QRCodePopup component

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -140,5 +140,6 @@
         <file>LedgerSignTransactionView.qml</file>
         <file>DiscoverServerTypeView.qml</file>
         <file>TransactionStatusBadge.qml</file>
+        <file>QRCodePopup.qml</file>
     </qresource>
 </RCC>
