--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -49,5 +49,6 @@
         <file>svg/tx-spv-not-longest.svg</file>
         <file>svg/tx-spv-verified.svg</file>
         <file>svg/qr.svg</file>
+        <file>svg/kebab.svg</file>
     </qresource>
 </RCC>
