analytics: settings support

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -142,5 +142,6 @@
         <file>ProgressIndicator.qml</file>
         <file>GToolButton.qml</file>
         <file>LedgerDevicesView.qml</file>
+        <file>AnalyticsConsentDialog.qml</file>
     </qresource>
 </RCC>
