ui: add left arrow tooltip

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -144,5 +144,6 @@
         <file>LedgerDevicesView.qml</file>
         <file>AnalyticsConsentDialog.qml</file>
         <file>RemoveWalletDialog.qml</file>
+        <file>LeftArrowToolTip.qml</file>
     </qresource>
 </RCC>
