ui: fix visibility of warning icon when controller dialog results in error

--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -52,5 +52,6 @@
         <file>svg/kebab.svg</file>
         <file>svg/plus.svg</file>
         <file>svg/help.svg</file>
+        <file>svg/warning_black.svg</file>
     </qresource>
 </RCC>
