separate news view

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -145,5 +145,6 @@
         <file>AnalyticsConsentDialog.qml</file>
         <file>RemoveWalletDialog.qml</file>
         <file>LeftArrowToolTip.qml</file>
+        <file>BlockstreamView.qml</file>
     </qresource>
 </RCC>
