analytics: view to display an alert

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -146,5 +146,6 @@
         <file>RemoveWalletDialog.qml</file>
         <file>LeftArrowToolTip.qml</file>
         <file>BlockstreamView.qml</file>
+        <file>AlertView.qml</file>
     </qresource>
 </RCC>
