refactor: extract login with password view

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -149,5 +149,6 @@
         <file>JadeViewDeviceNetwork.qml</file>
         <file>JadeViewDevice.qml</file>
         <file>LoginWithPinView.qml</file>
+        <file>LoginWithPasswordView.qml</file>
     </qresource>
 </RCC>
