refactor: convert accountdelegate to single file component

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -146,5 +146,6 @@
         <file>JadeViewDevice.qml</file>
         <file>LoginWithPinView.qml</file>
         <file>LoginWithPasswordView.qml</file>
+        <file>AccountDelegate.qml</file>
     </qresource>
 </RCC>
