refactor: convert discoverservertypeviewcard to single file component

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -147,5 +147,6 @@
         <file>LoginWithPinView.qml</file>
         <file>LoginWithPasswordView.qml</file>
         <file>AccountDelegate.qml</file>
+        <file>DiscoverServerTypeViewCard.qml</file>
     </qresource>
 </RCC>
