refactor: convert selectservertypeviewcard to single file component

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -149,5 +149,6 @@
         <file>AccountDelegate.qml</file>
         <file>DiscoverServerTypeViewCard.qml</file>
         <file>WalletListDelegate.qml</file>
+        <file>SelectServerTypeViewCard.qml</file>
     </qresource>
 </RCC>
