refactor: convert popupballoon to single file component

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -150,5 +150,6 @@
         <file>DiscoverServerTypeViewCard.qml</file>
         <file>WalletListDelegate.qml</file>
         <file>SelectServerTypeViewCard.qml</file>
+        <file>PopupBalloon.qml</file>
     </qresource>
 </RCC>
